--- a/static/client/css/registers.css
+++ b/static/client/css/registers.css
@@ -3,7 +3,7 @@ html {
     margin: 0;
     padding: 0;
     height: 100%;
-    background-image: url("IMG_0198.jpg");
+    background-image: url("../img/IMG_0198.jpg");
     background-repeat: no-repeat;
     background-position: initial;
     background-size: cover;
@@ -11,7 +11,7 @@ html {
 
 .user_card {
     max-width: 360px;
-    max-height: 450px;
+    max-height: 480px;
     margin-top: 50px;
     margin-bottom: 70px;
     background: rgba(211,211,211,0.4);
@@ -125,4 +125,12 @@ a{
 #languages a:hover {
     color: #fff;
     background-color: #000;
+}
+
+.list-error {
+    display: block;
+    padding-left: 8px;
+    padding-right: 8px;
+    margin-left: 5px;
+    margin-right: 5px;
 }
