--- a/templates/client/client_view/index.html
+++ b/templates/client/client_view/index.html
@@ -4,46 +4,14 @@
 
 {% block body %}
     {% if album %}
-        {% for alb in album %}
         <h2 class="alert-info" id="info" style="text-align: center; margin-top: auto">
-            Hi, {{ user.first_name }}. You have some new photos.</h2>
+            Hi, {{ user.first_name }}. You have {{ album.get_photos_count }} new photos.</h2>
         <div class="alert-warning" style="text-align: center; font-size: medium">
-            Click  <a href="{% url 'client:album_details' alb.id %}">here</a> </div>
-        {% endfor %}
+            Click  <a href="{% url 'client:album_details' album.id %}">here</a> </div>
     {% else %}
         <h2 class="alert-info" id="info" style="text-align: center; margin-top: auto">
             Hi, {{ user.first_name }}. You don't have any photos uploaded yet.</h2>
         <div class="alert-warning" style="text-align: center; font-size: medium">
             Wanna book me ? Click <a href="{% url 'client:book_me' %}">here</a> </div>
     {% endif %}
-
-    <script>
-            // Centring function:
-        jQuery.fn.center = function () {
-            this.css("position","absolute");
-            this.css("top", Math.max(0, (($(window).height() - $(this).outerHeight()) / 2) +
-                                                        $(window).scrollTop()) + "px");
-            this.css("left", Math.max(0, (($(window).width() - $(this).outerWidth()) / 2) +
-                                                        $(window).scrollLeft()) + "px");
-            return this;
-        }
-
-        // Centring element:
-        $('.container').center();
-
-        // toggling classes
-        $('a.btn-like').on('click', function() {
-          $(this).toggleClass('liked');
-          $('.like-text,.unlike-text').toggle();
-        });
-
-        $('a.btn-favorite').on('click', function() {
-          $(this).toggleClass('liked');
-          $('.favorite-text,.unfavorite-text').toggle();
-        });
-    </script>
-
-    <script src="{% static 'client/index.js' %}"></script>
-    <script src="{% static 'client/likes.js' %}"></script>
-
 {% endblock body %}
