--- a/templates/client/login_registration/login.html
+++ b/templates/client/login_registration/login.html
@@ -32,6 +32,9 @@
                             <input type="password" name="password" placeholder="{% trans 'Password' %}..."
                                    class="form-control">
                         </div>
+                        <div class="input-group mb-2">
+                            <div><a href="{% url 'reset_password' %}" style="text-decoration: none">Forgot password ?</a></div>
+                        </div>
 
                         <div class="d-flex justify-content-center mt-3 login_container">
                             <input class="btn login_btn" type="submit" value="{% trans 'Login' %}">
