--- a/templates/client/test.html
+++ b/templates/client/test.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="../../static/client/gallery.css">
+    <link rel="stylesheet" href="../../static/client/css/gallery.css">
     <meta charset="UTF-8">
     <title>Title</title>
     <style>
