--- a/templates/client/login_registration/login.html
+++ b/templates/client/login_registration/login.html
@@ -33,7 +33,7 @@
                                    class="form-control">
                         </div>
                         <div class="input-group mb-2">
-                            <div><a href="{% url 'reset_password' %}" style="text-decoration: none">Forgot password ?</a></div>
+                            <div><a href="{% url 'reset_password' %}" style="text-decoration: none">{% trans 'Forgot password' %} ?</a></div>
                         </div>
 
                         <div class="d-flex justify-content-center mt-3 login_container">
