--- a/templates/administration/list/list_album_client.html
+++ b/templates/administration/list/list_album_client.html
@@ -50,7 +50,8 @@
                                     <i class="fas fa-eye"></i>&nbsp;Show
                                 </button>
                             </a>
-                            <a href="{% url 'administration:delete_client_album' album.pk %}">
+                            <a href="{% url 'administration:delete_client_album' album.pk %}"
+                               onClick="return confirm('Are you sure you want to delete this item?');">
                                 <button class="btn btn-danger">
                                     <i class="fas fa-trash"></i>&nbsp;Delete
                                 </button>
