--- a/templates/administration/list/list_requested_session.html
+++ b/templates/administration/list/list_requested_session.html
@@ -102,7 +102,8 @@
                             <a href="{% url 'administration:session_update' rs.pk %}" class="btn btn-success btn-sm">
                                 <i class="fas fa-edit"></i>&nbsp;Edit
                             </a>&nbsp;
-                            <a href="{% url 'administration:session_delete' rs.pk %}" class="btn btn-danger btn-sm">
+                            <a href="{% url 'administration:session_delete' rs.pk %}" class="btn btn-danger btn-sm"
+                               onClick="return confirm('Are you sure you want to delete this item?');">
                                 <i class="fas fa-trash"></i>&nbsp;Delete
                             </a>
                         </td>
