change homepage promotions

--- a/templates/administration/list/list_album_client_photos.html
+++ b/templates/administration/list/list_album_client_photos.html
@@ -41,6 +41,7 @@
                         <div style="margin: 5px">
                             <div>
                                 <img src="{{ photo.file.url }}" alt="" style="height: 150px">
+                                <p style="max-width: 200px">{{ photo.file.name }}</p>
                             </div>
                             <br><br>
                         </div>
