--- a/templates/client/booking_and_promotions/promotions.html
+++ b/templates/client/booking_and_promotions/promotions.html
@@ -35,10 +35,10 @@
                     <td class="u-align-left u-border-1 u-border-palette-5-dark-2 u-first-column u-table-cell">
                         {% trans "Price" %}
                     </td>
-                    <td class="u-border-1 u-border-palette-5-dark-2 u-table-cell">$ 130</td>
-                    <td class="u-border-1 u-border-palette-5-dark-2 u-table-cell">$ 220</td>
-                    <td class="u-border-1 u-border-palette-5-dark-2 u-table-cell">$ 325</td>
-                    <td class="u-border-1 u-border-palette-5-dark-2 u-table-cell">$ 460</td>
+                    <td class="u-border-1 u-border-palette-5-dark-2 u-table-cell">$ 150</td>
+                    <td class="u-border-1 u-border-palette-5-dark-2 u-table-cell">$ 250</td>
+                    <td class="u-border-1 u-border-palette-5-dark-2 u-table-cell">$ 350</td>
+                    <td class="u-border-1 u-border-palette-5-dark-2 u-table-cell">$ 450</td>
                 </tr>
                 <tr style="height: 48px;">
                     <td class="u-align-left u-border-1 u-border-palette-5-dark-2 u-table-cell">{% trans "Studio" %}</td>
@@ -57,10 +57,10 @@
                     <td class="u-align-left u-border-1 u-border-palette-5-dark-2 u-first-column u-table-cell">
                         {% trans "Package" %}
                     </td>
-                    <td class="u-border-1 u-border-palette-5-dark-2 u-table-cell">{% trans "3 photos" %}</td>
-                    <td class="u-border-1 u-border-palette-5-dark-2 u-table-cell">{% trans "7 photos" %}</td>
-                    <td class="u-border-1 u-border-palette-5-dark-2 u-table-cell">{% trans "15 photos" %}</td>
-                    <td class="u-border-1 u-border-palette-5-dark-2 u-table-cell">{% trans "30 photos" %}</td>
+                    <td class="u-border-1 u-border-palette-5-dark-2 u-table-cell">3 {% trans "photos" %}</td>
+                    <td class="u-border-1 u-border-palette-5-dark-2 u-table-cell">5 {% trans "photos" %}</td>
+                    <td class="u-border-1 u-border-palette-5-dark-2 u-table-cell">10 {% trans "photos" %}</td>
+                    <td class="u-border-1 u-border-palette-5-dark-2 u-table-cell">15 {% trans "photos" %}</td>
                 </tr>
                 <tr style="height: 48px;">
                     <td class="u-align-left u-border-1 u-border-palette-5-dark-2 u-first-column u-table-cell">
