--- a/templates/homepage/index.html
+++ b/templates/homepage/index.html
@@ -24,9 +24,9 @@
     <section class="pricing-table">
         <div class="container">
             <div class="block-heading">
-                <h2>{% trans "Promotions" %}</h2>
+{#                <h2>{% trans "" %}</h2>#}
                 <p class="text-black important" style="color: black; font-weight: 600">
-                    {% trans "For a limited time, only in <b>Orlando</b>, I am offering a 3 photos package for only $130." %}
+                    {% trans "Click here to book" %}
                 </p>
                 <a href="{% url 'client:book_me_session' 1 %}" class="btn btn-primary btn-xl js-scroll-trigger"
                    style="background-color: #6c757d;">{% trans "Book Now" %}</a>
