added new promotions price

--- a/templates/client/booking_and_promotions/bookme.html
+++ b/templates/client/booking_and_promotions/bookme.html
@@ -124,7 +124,7 @@
                         </p>
                         <p class="important"
                            style="font-size: 16px; font-weight: 700; line-height: 24px; color: #777777;">
-                            {% trans "NB: A $100 deposit is required to book the date. No deposit, no obligation" %}.
+                            {% trans "NB: A $100 deposit is required to book the date. NO DEPOSIT, NO OBLIGATION." %}.
                         </p>
 
                     </div>
