--- a/templates/administration/email_template/session_request_received.html
+++ b/templates/administration/email_template/session_request_received.html
@@ -153,7 +153,7 @@
                                         {% endblocktranslate %}
                                     </p>
                                     <p style="font-size: 16px; font-weight: 700; line-height: 24px; color: #777777;">
-                                        {% trans "NB: A $100 deposit is required to book the date. No deposit, no obligation" %}.
+                                        {% trans "NB: A $100 deposit is required to book the date. NO DEPOSIT, NO OBLIGATION." %}.
                                     </p>
                                 </td>
                             </tr>
