--- a/templates/client/booking_and_promotions/promotions.html
+++ b/templates/client/booking_and_promotions/promotions.html
@@ -8,6 +8,8 @@
 {% block body %}
     <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
         <h1 class="u-text u-text-1">{% trans "Promotion Plans" %}</h1>
+        <p style="margin: 0;">{% trans "NB: A $100 deposit is required to book the date. NO DEPOSIT, NO OBLIGATION." %}</p>
+        <p style="margin: 0 0 10px 0">{% trans "All pictures are EDITED." %}</p>
         <div class="u-expanded-width u-table u-table-responsive u-table-1">
             <table class="u-table-entity">
                 <colgroup>
@@ -47,10 +49,10 @@
                         +$ 40
                     </td>
                     <td class="u-border-2 u-border-no-left u-border-no-right u-border-palette-5-dark-2 u-table-cell u-text-palette-2-base u-table-cell-11">
-                        $ +40
+                        + $40
                     </td>
                     <td class="u-border-2 u-border-palette-5-dark-2 u-table-cell u-text-palette-4-base u-table-cell-12">
-                        $ +40
+                        + $40
                     </td>
                 </tr>
                 <tr style="height: 48px;">
@@ -66,7 +68,7 @@
                     <td class="u-align-left u-border-1 u-border-palette-5-dark-2 u-first-column u-table-cell">
                         {% trans "Mini Video" %}
                     </td>
-                    <td class="u-border-1 u-border-palette-5-dark-2 u-table-cell u-table-cell-18">-</td>
+                    {% comment %}<td class="u-border-1 u-border-palette-5-dark-2 u-table-cell u-table-cell-18">-</td>
                     <td class="u-border-1 u-border-palette-5-dark-2 u-table-cell u-table-cell-18">-</td>
                     <td class="u-border-1 u-border-palette-5-dark-2 u-table-cell u-table-cell-18">-</td>
                     <td class="u-border-1 u-border-palette-5-dark-2 u-table-cell u-text-palette-1-base u-table-cell-20">
@@ -79,6 +81,16 @@
                               <path d="m159.988281 318.582031c-3.988281 4.011719-9.429687 6.25-15.082031 6.25s-11.09375-2.238281-15.082031-6.25l-120.449219-120.46875c-12.5-12.5-12.5-32.769531 0-45.246093l15.082031-15.085938c12.503907-12.5 32.75-12.5 45.25 0l75.199219 75.203125 203.199219-203.203125c12.503906-12.5 32.769531-12.5 45.25 0l15.082031 15.085938c12.5 12.5 12.5 32.765624 0 45.246093zm0 0"></path>
                           </svg>
                       </span>
+                    </td>{% endcomment %}
+                    <td class="u-border-1 u-border-palette-5-dark-2 u-table-cell">+ $50</td>
+                    <td class="u-border-1 u-border-palette-5-dark-2 u-table-cell u-text-palette-3-base u-table-cell-10">
+                        +$ 50
+                    </td>
+                    <td class="u-border-2 u-border-no-left u-border-no-right u-border-palette-5-dark-2 u-table-cell u-text-palette-2-base u-table-cell-11">
+                        + $50
+                    </td>
+                    <td class="u-border-2 u-border-palette-5-dark-2 u-table-cell u-text-palette-4-base u-table-cell-12">
+                        + $50
                     </td>
                 </tr>
                 <tr style="height: 48px;">
